# claude-remote-telegram

./: .env.example  .gitignore  Dockerfile  FEATURES_TODO.md  FEATURE_IMPL_PROMPT.md  README.md  SESSION.md  docker-compose.yml  pyproject.toml  requirements.txt  restart.bat
docs/: MESSAGE_DISPLAY.md
src/: config.py  main.py
src/bot/: commands.py  formatters.py  handlers.py  middleware.py
src/claude/: bridge.py  client.py  executor.py  tools.py
src/security/: auth.py  sandbox.py
src/session/: manager.py  models.py  repository.py
src/tools/: bash.py  file_list.py  file_read.py  file_write.py
tests/: test_auth.py  test_bridge.py  test_config.py  test_formatters.py  test_handlers.py  test_session.py
